# Service

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: chat-service.yml  message-service.yml  web-service.yml
chat-service/: .env  Cargo.toml  Dockerfile  diesel.toml  sqlx-data.json
chat-service/src/: chat.rs  db.rs  handler.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
chat-service/src/router/: mod.rs  model.rs  router.rs
chat-service/src/service/: chat_history.rs  chat_room.rs  mod.rs
chat-service/src/websocket/: handler.rs  server.rs
message-service/: pom.xml
message-service/src/main/java/com/escambia/official/messageservice/: MessageServiceApplication.java
message-service/src/main/java/com/escambia/official/messageservice/config/: SwaggerConfig.java
message-service/src/main/java/com/escambia/official/messageservice/controller/: ChatController.java  NotificationController.java
message-service/src/main/java/com/escambia/official/messageservice/model/: Chat.java
message-service/src/main/java/com/escambia/official/messageservice/repository/: ChatRepository.java
message-service/src/main/java/com/escambia/official/messageservice/service/: ChatService.java
message-service/src/main/java/com/escambia/official/messageservice/utility/: ApnsUtility.java
message-service/src/main/resources/: application.yml  banner.txt
message-service/src/test/java/com/escambia/official/messageservice/: MessageServiceApplicationTests.java
web-service/: HELP.md  pom.xml
web-service/src/main/java/com/escambia/official/webservice/: WebServiceApplication.java
web-service/src/main/java/com/escambia/official/webservice/config/: AuthenticationManager.java  SecurityConfig.java  SecurityContextRepository.java  SwaggerConfig.java
web-service/src/main/java/com/escambia/official/webservice/controller/: ExchangeController.java  (+4 more)
web-service/src/main/resources/: APN_Key.p8  application.yml  banner.txt
web-service/src/test/java/com/escambia/official/webservice/: WebServiceApplicationTests.java
(+43 files in other folders)
