[package]
name = "chat_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
chrono = "0.4.19"
log = "0.4.17"
env_logger = "0.9.0"
