[package]
name = "chat-service"
version = "0.2.0"
authors = ["Ming Chang (mail@mingchang.tw)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
actix-web = "4.1.0"
actix-rt = "2.7.0"
actix-ws = "0.2.5"
awc = "3.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
rand = "0.8.5"
futures-util = "0.3.21"
tokio = { version = "1.19.2", features = ["rt", "macros", "sync", "time"] }
sqlx = { version = "0.6.0", features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono", "offline" ] }
mimalloc = { version = "0.1.29", default-features = false }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
